webdav/webdav.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdav
  namespace: production
  labels:
    app: webdav
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webdav
  template:
    metadata:
      labels:
        app: webdav
    spec:
      securityContext:
        runAsUser: $MY_UID
        runAsGroup: $MY_UID
        fsGroup: $MY_UID
      containers:
        - name: webdav
          image: rclone/rclone:latest
          args: ["serve", "webdav", "/data", "--addr", "0.0.0.0:8080", "--htpasswd", "/config/rclone/htpasswd"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config/rclone
              readOnly: true
            - name: data
              mountPath: /data
          securityContext:
            allowPrivilegeEscalation: false
            seLinuxOptions:
              type: spc_t # SELinux doesn't play well with K8s PVCs
      volumes:
        - name: config
          configMap:
            name: webdav
        - name: data
          persistentVolumeClaim:
            claimName: webdav-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: webdav
  namespace: production
  labels:
    app: webdav
spec:
  selector:
    app: webdav
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
